--- a/BlackOutGobelins/TBHomeViewController.xib
+++ b/BlackOutGobelins/TBHomeViewController.xib
@@ -205,7 +205,7 @@
 								<string key="NSFrame">{{263, 236}, {42, 21}}</string>
 								<reference key="NSSuperview" ref="986917462"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
+								<reference key="NSNextKeyView" ref="244148440"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -226,6 +226,7 @@
 								<string key="NSFrame">{{263, 259}, {42, 21}}</string>
 								<reference key="NSSuperview" ref="986917462"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -358,11 +359,11 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">mostPopularFriendNameLabel</string>
+						<string key="label">friendOnPictureNameLabel</string>
 						<reference key="source" ref="986917462"/>
 						<reference key="destination" ref="244148440"/>
 					</object>
-					<int key="connectionID">350</int>
+					<int key="connectionID">351</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -1134,7 +1135,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">350</int>
+			<int key="maxID">351</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1165,6 +1166,20 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">TBHomeViewController</string>
 					<string key="superclassName">TBAViewController</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="loginButtonHandler:">id</string>
+						<string key="logoutButtonHandler:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="loginButtonHandler:">
+							<string key="name">loginButtonHandler:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="logoutButtonHandler:">
+							<string key="name">logoutButtonHandler:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="loggedView">UIView</string>
 						<string key="notLoggedView">UIView</string>
@@ -1189,14 +1204,18 @@
 					<string key="superclassName">TBASubView</string>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="bestFriendNameLabel">UILabel</string>
+						<string key="friendOnPictureNameLabel">UILabel</string>
 						<string key="imageView">UIImageView</string>
 						<string key="loaderView">UIActivityIndicatorView</string>
-						<string key="mostPopularFriendNameLabel">UILabel</string>
 						<string key="nameLabel">UILabel</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
 						<object class="IBToOneOutletInfo" key="bestFriendNameLabel">
 							<string key="name">bestFriendNameLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="friendOnPictureNameLabel">
+							<string key="name">friendOnPictureNameLabel</string>
 							<string key="candidateClassName">UILabel</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="imageView">
@@ -1206,10 +1225,6 @@
 						<object class="IBToOneOutletInfo" key="loaderView">
 							<string key="name">loaderView</string>
 							<string key="candidateClassName">UIActivityIndicatorView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="mostPopularFriendNameLabel">
-							<string key="name">mostPopularFriendNameLabel</string>
-							<string key="candidateClassName">UILabel</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="nameLabel">
 							<string key="name">nameLabel</string>
